# NORM-functions

./: .gitignore  CMakeLists.txt  NORMALISATION_NOTES.md  README.md  normFunctions.cxx  normFunctions.h  own-normFactors.cxx
include/: normFunctions.h
src/: normFunctions.cxx  own-normFactors.cxx
